--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,16 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-defaults:
-  - scope:
-      path: "/"
-    values:
-      layout: default
-  - scope:
-      path: "_posts"
-    values:
-      layout: post
+base-url: felicity.love
+
+# defaults:
+#   - scope:
+#       path: "/"
+#     values:
+#       layout: default
+#   - scope:
+#       path: "_posts"
+#     values:
+#       layout: post
 
 permalink: /:year/:month/:day/:title/
